# remmina-plugin-anydesk

./: CMakeLists.txt  README.md
remmina-plugin-anydesk/: CMakeLists.txt
remmina-plugin-anydesk/src/: plugin_config.h  remmina_plugin.c
